# mdict-query

./: .gitignore  README.md  pyproject.toml
src/mdict_query/: mdict_dir.py  mdict_query.py  readmdict.py  web.py
